--- a/test/tokenizer_test.ipynb
+++ b/test/tokenizer_test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "266f79f8",
+   "execution_count": 2,
+   "id": "83c5d390",
    "metadata": {
     "scrolled": false
    },
@@ -18,7 +18,11 @@
     "year = []\n",
     "text = []\n",
     "\n",
+    "\n",
+    "\n",
     "import os, glob\n",
+    "\n",
+    "os.chdir('../parse_results/')\n",
     "for filename in glob.glob('*.txt'):\n",
     "    with open(os.path.join(os.getcwd(), filename), 'r') as f: # open in readonly mode\n",
     "        lines = f.readlines()\n",
@@ -43,32 +47,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a78036d4",
+   "execution_count": 4,
+   "id": "5c4a0603",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "earlier than 1950: 0\n",
+      "earlier than 1950: 1\n",
       "1950s: \n",
       "0\n",
       "1960s: \n",
       "0\n",
       "1970s: \n",
-      "0\n",
+      "36\n",
       "1980s: \n",
-      "45\n",
+      "1123\n",
       "1990s: \n",
-      "518\n",
+      "18376\n",
       "2000s: \n",
-      "355\n",
+      "40880\n",
       "2010s: \n",
-      "27\n",
+      "1798\n",
       "2020s: \n",
-      "0\n"
+      "28087\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "90301"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,13 +94,15 @@
     "        print(len(db[(db['year'] >= decade) & (db['year'] < decade + 10)]))\n",
     "#         db[(db['year'] > 2010) & (db['year'] < 2025)]\n",
     "\n",
-    "decade_slice(db)"
+    "decade_slice(db)\n",
+    "\n",
+    "len(db)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1b476911",
+   "id": "f37f431d",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3945c151",
+   "id": "9841e539",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44f7a29",
+   "id": "59c57da2",
    "metadata": {},
    "outputs": [],
    "source": []
