--- a/test/tokenizer_test.ipynb
+++ b/test/tokenizer_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "83c5d390",
    "metadata": {
     "scrolled": false
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "bb5e6d1c",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "2171250c",
    "metadata": {},
    "outputs": [
@@ -92,19 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing 16000 at 2024-05-05 11:52:14.088681\n",
-      "processing 17000 at 2024-05-05 12:03:06.313572\n",
-      "processing 18000 at 2024-05-05 12:14:07.325957\n",
-      "processing 19000 at 2024-05-05 12:23:46.359712\n",
-      "processing 20000 at 2024-05-05 12:33:44.380267\n",
-      "processing 21000 at 2024-05-05 12:42:56.494835\n",
-      "processing 22000 at 2024-05-05 12:53:22.765870\n",
-      "processing 23000 at 2024-05-05 13:02:22.187177\n",
-      "processing 24000 at 2024-05-05 13:12:28.607304\n",
-      "processing 25000 at 2024-05-05 13:22:08.563935\n",
-      "processing 26000 at 2024-05-05 13:30:59.539881\n",
-      "processing 27000 at 2024-05-05 13:40:13.138052\n",
-      "processing 28000 at 2024-05-05 13:49:13.035628\n"
+      "processing 0 at 2024-05-09 14:46:12.178132\n"
      ]
     }
    ],
@@ -114,6 +102,7 @@
     "# print([(w.text, w.pos_) for w in doc])\n",
     "import re\n",
     "import datetime\n",
+    "import os, glob\n",
     "\n",
     "allowed_pos = frozenset(['ADJ', #adjective\n",
     "                        'ADV', #adverb\n",
@@ -159,11 +148,11 @@
     "nlp_out_file = open(\"nlp_out_0.txt\", 'a')\n",
     "\n",
     "log_file = open(\"log.txt\", 'a')\n",
-    "\n",
-    "for song_ind in range(16000, len(text)):\n",
+    "# 0th file should be redone\n",
+    "for song_ind in range(0, 1000):\n",
     "    if song_ind % 1000 == 0:\n",
     "        nlp_out_file.close()\n",
-    "        nlp_out_file = open(\"nlp_out_\" + str(song_ind) + \".txt\", 'a')\n",
+    "        nlp_out_file = open(\"nlp_out_\" + str(song_ind) + \".txt\", 'w')\n",
     "        print('processing ' + str(song_ind) + ' at ' + str(datetime.datetime.now()))\n",
     "        log_file.write('processing ' + str(song_ind) + ' at ' + str(datetime.datetime.now()) + '\\n')\n",
     "    jap_words, eng_words = process_single_song_2_bag_of_words(text[song_ind])\n",
@@ -198,7 +187,7 @@
    "id": "da9c6b59",
    "metadata": {},
    "source": [
-    "ID 273692 has only english in jap block"
+    "ID 51 has only english in jap block"
    ]
   },
   {
